se modifico el login de descargas

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@ and open the template in the editor.
                 </div>
         </section>
         
-         <div style="display:none;" id="firebaseui-auth-container"></div>
+         <div style="display:block;" id="firebaseui-auth-container"></div>
          <div id="modal1" class="modal">
                         <div class="modal-content">
                             <h4>CV descarga</h4>
@@ -141,6 +141,7 @@ and open the template in the editor.
                                           <i class="chip">PHP YII FRAMEWORK 2.0</i>  
                                            <i class="chip">GIT & GITHUB</i><i class="chip">INSTALACIÓN CCTV</i>
                                            <i class="chip">INSTALACIÓN DE REDES</i>
+                                           <i class="chip">FIREBASES GOOGLE</i>
                                     </div>
                                 </div>
                             </div>
@@ -195,8 +196,7 @@ and open the template in the editor.
                 				<span>Abril 2017- Agosto 2017 </span>
                                                 <div></div>
                                                 <span>Freelance</span>
-                				<p>Desarrolle una página web, sobre ventas o rentas de casas,
-terrenos                                           y departamentos para la ciudad de Valladolid.</p>
+                				<p>Desarrolle una página web, sobre ventas o rentas de casas,terrenos                                           y departamentos para la ciudad de Valladolid.</p>
                 			</div> <!-- cd-timeline-content -->
                 		</div> <!-- cd-timeline-block -->
                 		<div class="cd-timeline-block wow fadeIn a3" data-wow-delay="0.3s">
