correciones desde tux

--- a/public/index.html
+++ b/public/index.html
@@ -57,11 +57,11 @@ and open the template in the editor.
                             <div class="intro-content ">
                                 <h2>Leonardo Maldonado</h2>
                                 <span>Ing. en Sistemas Computacionales </span>
-                                <p>Hola a todos, Mi nombre es Leonardo Maldonado López soy
+                                <p>Hola a todos, mi nombre es Leonardo Maldonado López soy
                                     Ingeniero en Sistemas Computacionales, Desarrollador en aplicaciones
-                                    Android, Comence con esta pasión de la programación desde que 
+                                    Android. Comence con esta pasión de la programación desde que 
                                     empece la carrera universitaría,
-                                    Me considero una persona responsable,
+                                    me considero una persona responsable,
                                     dinámica y creativa, con facilidad de
                                     adaptación y capacidad de trabajar en
                                     equipo, en condiciones de alta presión,
@@ -90,10 +90,10 @@ and open the template in the editor.
          <div id="modal1" class="modal">
                         <div class="modal-content">
                             <h4>CV descarga</h4>
-                            <p class="center-align">Por razones de seguridad,solo pido que inicies sesión para poder descargar mi CV! gracias :)</p>
+                            <p class="center-align">Por razones de seguridad,solo pido que inicies sesión para poder descargar mi CV! gracias </p>
                         </div>
                         <div class="modal-footer">
-                            <a id="si_modal" href="#firebaseui-auth-container" class="modal-action modal-close waves-effect waves-green btn-flat">Sí, descargar</a>
+                            <a id="si_modal" href="#firebaseui-auth-container" class="modal-action modal-close waves-effect waves-green btn-flat">Sí, deseo descargar</a>
                         </div>
                     </div>
            
@@ -151,7 +151,7 @@ and open the template in the editor.
                                 </div>
                                 <div class="skill-bar col m10 wow fadeIn a2" data-wow-delay="0.2s">
                                     <h3>Habilidades Personales </h3>
-                                    <span>Comunicacion</span>                                    
+                                    <span>Comunicación</span>                                    
                                     <div class="progress">
                                         <div class="determinate"> 90% </div>
                                     </div>
@@ -169,6 +169,10 @@ and open the template in the editor.
                                     <span>Dedicación</span>
                                     <div class="progress">
                                         <div class="determinate">85%</div>
+                                    </div>
+                                    <span>ingles</span>
+                                    <div class="progress">
+                                        <div class="determinate">30%</div>
                                     </div>
                                 </div>
                             </div>
@@ -225,7 +229,7 @@ and open the template in the editor.
                                                 <br>
                                                 <span>Instituto Tecnológico Superior de Valladolid</span>
                 				<p>Desarrolle conocimientos de emprendimiento, registro de marca
-                                                    ante el IMPI, modelo de
+                                                    ante el IMPI(Instituto Mexicano de Propiedad Intelectual), modelo de
                                                     negocio, plan financiero, daba capacitación a un grupo de 10
                                                     emprendedores en donde
                                                     consistía orientarlos a utilizar una plataforma e-learning del
@@ -307,10 +311,12 @@ and open the template in the editor.
             <div class="container">
                 <div class="row">
                     <div class="section-title wow fadeIn a1" data-wow-delay="0.1s">
-                        <h2> <i class="fa fa-edit"> </i>Blog</h2>
+                        <h2> <i class="fa fa-edit"> </i>Logros</h2>
                     </div>
                     <div class="row">
                         <div class="blog">
+
+                             <!--  QUIar este cvomentatrioo  de la se4sion  poner logros 
                             <div class="col m4 s12 blog-post wow fadeIn a2" data-wow-delay="0.2s">
                                 <div class="thumbnail z-depth-1 animated">
                                     <a href="blog-full-post.html"><img src="images/y.jpg" alt="" class="responsive-img"></a>                                       
@@ -329,6 +335,7 @@ and open the template in the editor.
                                     </div>              
                                 </div>
                             </div>
+                            -->
                           <!--  <div class="col m4 s12 blog-post wow fadeIn a3" data-wow-delay="0.3s">
                                 <div class="thumbnail z-depth-1">
                                     <a href="blog-full-post.html"><img src="images/y.jpg" alt="" class="responsive-img"></a>                                        
@@ -479,12 +486,12 @@ and open the template in the editor.
                     <div class="interests col s12 m12 l12 wow fadeIn" data-wow-delay="0.1s">
                         <div class="row">
                             <ul class="z-depth-1"> <!-- interetsr icon start -->
-                                <li><i class="fa fa-facebook-official tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Facebook"></i></li>
+                                <li><i class="fa fa-facebook-official tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Facebook" src="https// Facebook.com"></i></li>
                                 <li><i class="fa fa-twitter tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Twitter"></i></li>
                                 <li><i class="fa fa-linkedin tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="linkedin"></i></li>
                                 <li><i class="fa fa-whatsapp tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Whatsapp"></i></li>
-                                <li><i class="fa fa-youtube tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Youtube"></i></li>
-                                <li><i class="fa fa-vimeo tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Vimeo"></i></li>
+                              <!--  <li><i class="fa fa-youtube tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Youtube"></i></li>
+                                <li><i class="fa fa-vimeo tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Vimeo"></i></li>-->
                             </ul> <!-- interetsr icon end -->
                         </div>
                     </div>  
